--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.3
 mypy-extensions==0.4.3
 pathspec==0.10.3
 platformdirs==2.6.2
+SQLAlchemy==2.0.45
 tk==0.1.0
 tomli==2.0.1
-typing-extensions==4.4.0
+typing_extensions==4.15.0
